# pgbouncer-ps-patch

./: .gitignore  LICENSE  Makefile.diff  README.md  build.gradle  configure.ac.diff  generate-diffs.sh  install-pgbouncer-ps-patch.sh
.github/workflows/: build.yml
etc/: pgbouncer.ini.diff
include/: bouncer.h.diff  messages.h  objects.h.diff  prepared_statement.h  proto.h.diff  protocol_message.h  ps.h  sbuf.h.diff
include/common/: postgres_compat.h.diff
src/: admin.c.diff  client.c.diff  main.c.diff  messages.c  objects.c.diff  prepared_statement.c  protocol_message.c  ps.c  sbuf.c.diff  server.c.diff  stats.c.diff
src/common/: numutils.c
test/: Dockerfile  test_prepared_statement.py
test/java/nl/topicus/: PgBouncerConfigBuilder.java  PgBouncerImageBuilder.java
test/nl/topicus/: AbstractPgBouncerTest.java  PgBouncerConfigBuilder.java  ServerSidePreparedStatementTest.java
test/prepared_statement/: test.ini
tests/: Dockerfile
tests/java/: build.gradle
tests/java/src/test/java/nl/topicus/integrations/pgbouncer/: PgBouncerContainer.java  PgBouncerImageBuilder.java
tests/java/src/test/java/nl/topicus/integrations/pgbouncer/jdbc/: AbstractPgBouncerTest.java  PgBouncerConfigBuilder.java  ServerSidePreparedStatementTest.java  SimplePgBouncerQuerier.java
tests/java/src/test/java/nl/topicus/integrations/pgbouncer/quarkus/: PgBouncerResource.java  QuarkusServerSidePreparedStatementTest.java
tests/java/src/test/resources/: application-test.properties
tests/rust/: Cargo.toml
tests/rust/tests/: pgbouncer-tests.rs  pgbouncer.rs  postgres.rs
(+1 files in other folders)
